2005-05-22  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkpixbuf.xml (save_to_callback): Add.

	* pygtk-gobject-functions.xml (markup_escape_text): Add.

	* pygtk-gtkentrycompletion.xml (get_text_column): Add description.

	* pygtk-gdk-functions.xml (notify_startup_complete)
	(get_program_class, set_program_class, get_display)
	(get_display_arg_name): Add descriptions of these new functions.

2005-05-20  John Finlay  <finlay@moeraki.com>

	* pygtk-gtksettings.xml (set_string_property, set_long_property)
	(set_double_property): Add more info about origin param.

2005-05-03  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcellrenderer.xml (Properties): Add description of
	"sensitive" property. Fixes #302841 (Gustavo Rahal).

2005-04-27  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkiconview.xml (set_columns, get_columns, set_item_width)
	(get_item_width, set_spacing, get_spacing, set_row_spacing)
	(get_row_spacing, set_column_spacing, get_column_spacing)
	(set_margin, get_margin): Add descriptions of these methods and
	their associated properties. Fixes #302196 (brett)

	* pygtk-gtktreeview.xml (insert_column_with_attributes): Fix typo
	and correct return value description. #302309. (Nick Kouremenos)

	* pygtk-gtktreeviewcolumn.xml (set_sizing): Add link to TreeViewColumn
	sizing constants.

2005-04-13  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml: Bump version number and date.

	======== 2.6.0 ============
2005-04-10  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml: Change date and comment out revhistory.

	* pygtk-gdk-functions.xml (gtk.gdk.threads_init): Remove confusing
	and possibly erroneous description. Fixes #172615 (John Ehresman)

2005-04-08  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkkeymap.xml (translate_keyboard_state): Remove extra arg from
	example call. (Nikos Kouremenos)

2005-04-04  John Finlay  <finlay@moeraki.com>

	* pygtk-hierarchy.xml: Add new 2.6 classes. (Nikos Kouremenos)
