@@ -2845,9 +2845,9 @@ linkend="signal-gtkwidget--window-state-event">window_state_event</link>"
 signal.</para>
 
       <para>Note that, according to the <ulink
-url="http://www.freedesktop.org/Standards/wm-spec">Extended Window Manager
-Hints</ulink> specification, the above state is mainly meant for user
-preferences and should not be used by applications e.g. for drawing
+url="http://standards.freedesktop.org/wm-spec/wm-spec-latest.html">Extended
+Window Manager Hints</ulink> specification, the above state is mainly meant
+for user preferences and should not be used by applications e.g. for drawing
 attention to their dialogs.</para>
 
     </refsect2>
@@ -2889,9 +2889,9 @@ linkend="signal-gtkwidget--window-state-event">window_state_event</link>"
 signal.</para>
 
       <para>Note that, according to the <ulink
-url="http://www.freedesktop.org/Standards/wm-spec">Extended Window Manager
-Hints</ulink> specification, the above state is mainly meant for user
-preferences and should not be used by applications e.g. for drawing
+url="http://standards.freedesktop.org/wm-spec/wm-spec-latest.html">Extended
+Window Manager Hints</ulink> specification, the above state is mainly meant
+for user preferences and should not be used by applications e.g. for drawing
 attention to their dialogs.</para>
 
     </refsect2>
@@ -3255,10 +3255,10 @@ south east, then move the window:</para>
   window.move(gtk.gdk.screen_width() - width, gtk.gdk.screen_height() - height)
 </programlisting>
 
-	<para>The extended window manager hints specification at <ulink
-url="http://www.freedesktop.org/Standards/wm-spec.html">
-http://www.freedesktop.org/Standards/wm-spec.html</ulink> has a nice table
-of gravities in the "implementation notes" section. The <link
+	<para>The <ulink
+url="http://standards.freedesktop.org/wm-spec/wm-spec-latest.html">Extended
+Window Manager Hints</ulink> specification has a nice table of gravities in
+the "implementation notes" section. The <link
 linkend="method-gtkwindow--get-position"><methodname>get_position</methodname>()</link>
 method documentation may also be relevant.</para>
 
