@@ -1,3 +1,8 @@
+2005-05-26  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkwindow.xml (set_keep_abaove, set_keep_below, move): 
+	Latest attempt to track freedesktop wm standard link. (Olav Vitters)
+
 2005-05-22  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gdkpixbuf.xml (save_to_callback): Add.
